<resources>
    <string name="app_name">Shuffle</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ranking">Ranking</string>
    <string name="account">Perfil</string>
    <string name="main">Inicio</string>
    <string name="about">Nosotros</string>
    <string name="settings">settings</string>
    <string name="help">Ayuda</string>
    <string name="sobre_nosotros">SOBRE NOSOTROS</string>
    <string name="about_text">Shuffle es una aplicación que consiste en un juego de adivinar canciones de Spotify. Este proyecto esta desarrollado por tres desarrolladores: Ramon Mormeneo, Carla Flores y Pol Trujillo, estudiantes de la Salle de Gràcia.</string>
    <string name="guardar">GUARDAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="contrase_a_actual">Contraseña Actual</string>
    <string name="nueva_contrasena">Nueva Contraseña</string>
    <string name="confirmar_nueva_contrasena">Confirmar Nueva Contraseña</string>
    <string name="ajustes_de_partida">Ajustes de Partida</string>
    <string name="n_mero_de_rondas">Número de rondas</string>
    <string name="duracion_de_cancion">Duración de canción</string>
    <string name="modo_dificil">Modo Difícil</string>
    <string name="segundos">segundos</string>
    <string name="sin_pistas">*Sin Pistas</string>
    <string name="jugar">JUGAR!</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="informacion_de_la_cuenta">Información de la cuenta</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="ayuda">AYUDA</string>
    <string name="titulo1_help">  Registro y Vinculación de Spotify:</string>
    <string name="titulo2_help">  Modos de Juego y Nº Jugadores:</string>
    <string name="texto1_help">Al registrarte en Shuffle, asegúrate de vincular tu cuenta de Sound Shuffle con Spotify.</string>
    <string name="texto2_help">Elige entre tres emocionantes modos de juego: \"Genres\", \"Artist\" y \"Playlist\".</string>
    <string name="texto2_2_help">Se puede jugar en solitario o en grupos de hasta 4 jugadores.</string>
    <string name="titulo3_help">  Configuración de partida:</string>
    <string name="texto3_help">En cada partida se puede configurar el número de rondas, la duración de reproducción de cada canción y el nivel de dificultad.</string>
    <string name="titulo4_help">  Modo difícil:</string>
    <string name="texto4_help">En el modo difícil, juega sin ninguna pista visual y demuestra tus habilidades auditivas.</string>
    <string name="titulo5_help">  Jugando en Multijugador:</string>
    <string name="texto5_help">Únete a una sala con un código de 4 letras/números proporcionado por el host. Interactúa con otros jugadores a través del chat.</string>
    <string name="titulo6_help">  Puntuación:</string>
    <string name="texto6_help">Gana puntos adivinando el título de la canción. La velocidad de respuesta afecta tus puntos.</string>
    <string name="titulo7_help">  Rachas de Aciertos:</string>
    <string name="texto7_help">Consigue puntos adicionales por acertar canciones consecutivamente.</string>
    <string name="titulo8_help">  Ranking:</string>
    <string name="texto8_help">Accede al Ranking para ver las puntuaciones de todos los jugadores.</string>
    <string name="texto9_help">¡Prepárate para disfrutar de la emoción de adivinar canciones con Shuffle!</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="contrasena">Contraseña</string>
    <string name="no_tienes_cuenta_registrate">¿No tienes cuenta? Registrate</string>
    <string name="login">LOGIN</string>
    <string name="rankings">Rankings</string>
    <string name="un_jugador">Un Jugador</string>
    <string name="multijugador">Multijugador</string>
    <string name="configurar_modo_de_juego_artist">Configurar Modo de Juego Artista</string>
    <string name="seleccionar">SELECCIONAR</string>
    <string name="configurar_modo_de_juego_genero">Configurar Modo de Juego Genero</string>
    <string name="configurar_modo_de_juego_playlist">Configurar Modo de Juego Playlist</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="logout">LOGOUT</string>
    <string name="nombre_usuario_con_puntos">Nombre Usuario:</string>
    <string name="password_con_puntos">Password:</string>
    <string name="cuenta_spotify">Cuenta Spotify:</string>
    <string name="correo">Correo:</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="ya_tienes_cuenta_inicia_sesion">¿Ya tienes cuenta? Inicia Sesión</string>
    <string name="fin_de_partida">Fin de Partida</string>
    <string name="volver">VOLVER</string>
    <string name="salir">SALIR</string>
    <string name="jugando">JUGANDO</string>
    <string name="adivina">  adivina…</string>
    <string name="puntuacion">Puntuación: 0</string>
    <string name="intento">INTENTO</string>
    <string name="unirse_a_sala">UNIRSE A SALA</string>
    <string name="crear_sala">CREAR SALA</string>
    <string name="unirse">UNIRSE</string>
    <string name="unete_a_una_sala_existente">ÚNETE A UNA SALA EXISTENTE</string>
    <string name="codigo_de_la_sala">CÓDIGO DE LA SALA</string>
    <string name="usuarios_listos">Usuarios listos:</string>
    <string name="listo">Listo?</string>
    <string name="empezar">EMPEZAR</string>
    <string name="nosotros">Nosotros</string>
</resources>